Add performnce test for Issue tracking